--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+To build x86_64 UEFI bootable image:
+cp x86config .config
+make menuconfig
+make
+
 This is the buildsystem for the OpenWrt Linux distribution.
 
 Please use "make menuconfig" to choose your preferred
